--- a/main.html
+++ b/main.html
@@ -10,8 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<div class="container">
-        This is a Heading
+    <div class="main">
+        <div class="heading" id="heading">
+            This is a Heading
+        </div>
     </div>
 </body>
 	
